# trip-planning-service

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  agent.py  api.py  component.py  input.json  main.py  requirements.txt  response.json  service.py
backend/lambda/: index.py
flights-mcp/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  smithery.yaml
flights-mcp/src/flights/: __init__.py  server.py
flights-mcp/src/flights/api/: __init__.py  client.py  endpoints.py
flights-mcp/src/flights/config/: __init__.py  api.py
flights-mcp/src/flights/models/: flight_search.py  multi_city.py  offers.py  search.py  segments.py  time_specs.py
flights-mcp/src/flights/services/: __init__.py  search.py
flights-mcp/tests/: test_duffel_api.py
frontend/: Dockerfile  README.md  component.py  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/plan/[id]/: page.tsx
frontend/src/components/ui/: reasoning.tsx
infrastructure/: shared.py
tests/unit/: test_backend_stack.py
